Symbol table skel

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,9 +1,12 @@
-all: nfv_parse.a nfv_resource.o nfv_assignment.o nfv_execute.o
+all: nfv_parse.a nfv_resource.o nfv_assignment.o nfv_execute.o nfv_symtab.o
 
 nfv_parse.a:
 	cd parse/ ; make
 
 nfv_resource.o:
+	cd models/ ; make
+
+nfv_symtab.o:
 	cd models/ ; make
 
 nfv_assignment.o:
